--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Antiparty Chat Quotes</h1>
+  <div class="header">
+    <a href="https://www.twitch.tv/antiparty" target="_blank">
+      <img src="twitch_logo.png" alt="Twitch Logo" class="twitch-logo">
+    </a>
+    <h1 class="channel-title">
+      <a href="https://www.twitch.tv/antiparty" target="_blank" class="channel-link">
+        Antiparty Chat Quotes
+      </a>
+    </h1>
+  </div>
   <table>
     <thead>
       <tr>
+        <th>#</th> <!-- Added table header for the index -->
         <th>Quote</th>
         <th>Author</th>
         <th>Timestamp</th>
